--- a/src/entities/habit/ui/habit-card/HabitCard.module.css
+++ b/src/entities/habit/ui/habit-card/HabitCard.module.css
@@ -7,9 +7,3 @@
 .contentWrapper {
 	padding: 0 10px 10px;
 }
-
-@media screen and (width >= 576px) {
-	.habit {
-		flex: 0 0 calc((var(--app-width) / 2) - (1rem / 2));
-	}
-}
