--- a/src/widgets/habit-list/ui/main/HabitList.module.css
+++ b/src/widgets/habit-list/ui/main/HabitList.module.css
@@ -4,6 +4,10 @@
 	gap: 16px;
 }
 
+.habitList > li {
+	min-width: 0;
+}
+
 .habitList.isArchive {
 	gap: 10px;
 }
